# strands-sqlite-session-manager

./: .gitignore  MANIFEST.in  README.md  manager.py  pyproject.toml
examples/: 01_basic_usage.py  02_multi_agent.py  03_streaming_and_tools.py  04_session_management.py  README.md  __init__.py
src/strands_sqlite_session_manager/: __init__.py  manager.py
tests/: __init__.py  test_manager.py
